--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,17 @@ version: 2.1
 jobs:
   say-hello:
     docker:
-        -   image:  cimg/base:2022.04
+        - image:  cimg/base:2022.04
     steps:
-        -   echo "Hello world from CircleCI"
+        - checkout
+        - python/install-packages:
+            pkg-manager: pip
+            # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
+            # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
+        - run:
+            name: Run tests
+          # This assumes pytest is installed via the install-package step above
+            command: hello.py
     #test1
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
