--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ orbs:
 jobs:
   say-hello:
     docker:
-        - image:  cimg/base:2022.04
+        - image:  cimg/python:3.10.5
     steps:
         - checkout
         - python/install-packages:
